--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Keeler Kanine Services</title>
+  <title>Keeler K-9 Services</title>
   <style>
     body {
       margin: 0;
@@ -131,10 +131,10 @@
 
 <header>
   <!-- TOP LEFT LOGO -->
-  <img src="https://via.placeholder.com/160x60?text=KKS+Logo" class="logo" alt="Keeler Kanine Logo">
+  <img src="kk9logo.png" class="logo" alt="Keeler Kanine Logo">
 
   <div class="inner">
-    <h1>Keeler Kanine Services</h1>
+    <h1>Keeler K-9 Services</h1>
     <p>Emergency housing and rehousing for dogs when owners can’t be there.</p>
 
     <!-- SLIDER -->
@@ -197,10 +197,10 @@
 </section>
 
 <footer>
-  © 2026 Keeler Kanine Services — Protecting your best friend when life gets hard.
+  © 2026 Keeler K-9 Services — Protecting your best friend when life gets hard.
 
   <!-- BOTTOM RIGHT LOGO -->
-  <img src="https://via.placeholder.com/160x60?text=KKS+Logo" class="footer-logo" alt="Keeler Kanine Logo">
+  <img src="kk9logo.png" class="footer-logo" alt="Keeler Kanine Logo">
 </footer>
 
 <script>
