--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
     }
 
     @media (max-width: 600px) {
-      .logo { height: 42px; }
-      .footer-logo { height: 34px; }
+      .logo { height: 42px; position: center; }
+      .footer-logo { height: 70px; position: center; }
     }
   </style>
 </head>
