--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     }
 
     header {
-      background: linear-gradient(135deg, var(--primary), #0E0F13);
-      color: var(--highlight);
-      padding: 70px 20px 40px;
-      position: relative;
-    }
+  background: linear-gradient(to bottom, #14151a 0%, #0E0F13 100%);
+  color: var(--highlight);
+  padding: 90px 20px 40px;
+  position: relative;
+}
 
     .logo {
       position: absolute;
