--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 <body>
 
 <header>
-  <img src="kk9logo.png" class="logo" alt="Keeler Kanine Logo">
+  <img src="kk9logo2.png" class="logo" alt="Keeler Kanine Logo">
 
   <div class="inner">
     <h1>Keeler K-9 Services</h1>
