--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
 </header>
   <main>
   <h2>About Us</h2>
-  <p>Your content here...</p>
+  <p>Keeler K-9 Services was created to make sure no dog is left behind when life takes an unexpected turn. We specialize in providing safe, temporary housing and responsible rehousing for dogs whose owners are suddenly unable to care for them due to arrest, hospitalization, or emergency situations. Our mission is simple: protect the bond between people and their pets while ensuring every dog receives stability, proper care, and compassion during difficult moments. With a network of trusted caregivers and a focus on transparency and dignity, Keeler K-9 Services exists to give both owners and their dogs peace of mind when it matters most.</p>
 </main>
 <script>
   const menuBtn = document.getElementById('menuToggle');
