--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 <body>
 
 <header>
-  <img src="kk9logo4.png" class="logo" alt="Keeler Kanine Logo">
+  <img src="kk9logo5.png" class="logo" alt="Keeler Kanine Logo">
 
   <nav class="nav">
   <button class="menu-btn" id="menuToggle">☰ Menu</button>
@@ -326,7 +326,7 @@
 
 <footer>
   © 2026 Keeler K-9 Services — Protecting your best friend when life gets hard.
-  <img src="kk9logo.png" class="footer-logo" alt="Keeler Kanine Logo">
+  <img src="kk9logo5.png" class="footer-logo" alt="Keeler Kanine Logo">
 </footer>
 
 <script>
