--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
 </head>
 <body>
   <header>
-  <img src="kk9logo.png" class="logo">
+  <img src="kk9logo5.png" class="logo">
 
   <nav class="nav">
     <button class="menu-btn" id="menuToggle">☰ Menu</button>
