--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
   <div class="menu" id="menu">
     <a href="about.html">About Us</a>
-    <a href="images.html">Images</a>
+    <a href="gallery.html">Images</a>
     <a href="testimonies1.html">Testimonies</a>
     <a href="mission1.html">Our Mission</a>
   </div>
