--- a/gallery.html
+++ b/gallery.html
@@ -139,7 +139,7 @@ footer {
 <body>
 
 <header>
-  <img src="kk9logo.png" class="logo">
+  <img src="kk9logo5.png" class="logo">
 
   <nav class="nav">
     <button class="menu-btn" id="menuToggle">☰ Menu</button>
