--- a/about.html
+++ b/about.html
@@ -4,8 +4,6 @@
   <meta charset="UTF-8">
   <title>Keeler K-9 Services</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- SAME STYLES EVERY PAGE -->
   <style>
     :root {
       --primary: #0E0F13;
@@ -102,7 +100,7 @@
     </div>
   </nav>
 
-  <h1>Keeler K-9 Services</h1>
+  <h1>Keeler K-9 Servicesblahblahrandiwashere</h1>
 </header>
   <main>
   <h2>About Us</h2>
