--- a/about.html
+++ b/about.html
@@ -96,8 +96,8 @@
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
       <a href="gallery.html">Images</a>
-      <a href="testimonies.html">Testimonies</a>
-      <a href="mission.html">Our Mission</a>
+      <a href="testimonies1.html">Testimonies</a>
+      <a href="mission1.html">Our Mission</a>
     </div>
   </nav>
 
