--- a/testimonies1.html
+++ b/testimonies1.html
@@ -134,8 +134,7 @@ footer {
     <div class="menu" id="menu">
       <a href="index.html">Home</a>
       <a href="about.html">About Us</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="testimonies1.html">Testimonies</a>
+      <a href="gallery.html">Gallery</a
       <a href="mission1.html">Our Mission</a>
     </div>
   </nav>
