--- a/gallery.html
+++ b/gallery.html
@@ -209,6 +209,7 @@ footer {
     <div class="dog-gallery">
       <img src="snow2.jpeg">
       <img src="snow1.jpeg">
+      <img src="https://picsum.photos/400/300">
     </div>
   </div>
 </div>
