--- a/gallery.html
+++ b/gallery.html
@@ -199,7 +199,7 @@ footer {
 
     <!-- DOG2 -->
 <div class="dog-card" onclick="toggleDog(this)">
-  <img src="snow1.jpeg">
+  <img src="snow1.jpg">
   <h3>Snow</h3>
   <div class="dog-expand">
     <p class="dog-story">
@@ -207,15 +207,15 @@ footer {
     </p>
 
     <div class="dog-gallery">
-      <img src="snow2.jpeg">
-      <img src="snow1.jpeg">
+      <img src="snow2.jpg">
+      <img src="snow1.jpg">
     </div>
   </div>
 </div>
     
 <!-- DOG3 -->
 <div class="dog-card" onclick="toggleDog(this)">
-  <img src="jax1.jpeg">
+  <img src="jax1.jpg">
   <h3>Jaxson</h3>
 
   <div class="dog-expand">
@@ -224,15 +224,63 @@ footer {
     </p>
 
     <div class="dog-gallery">
-      <img src="jax1.jpeg">
-      <img src="jax2.jpeg">
-      <img src="jax3.jpeg">
-      <img src="jax4.jpeg">
+      <img src="jax1.jpg">
+      <img src="jax2.jpg">
+      <img src="jax3.jpg">
+      <img src="jax4.jpg">
     </div>
   </div>
 </div>
    
    <!-- DOG4 -->
+<div class="dog-card" onclick="toggleDog(this)">
+  <img src="duke1.jpg">
+  <h3>Duke</h3>
+
+  <div class="dog-expand">
+    <p class="dog-story">
+      Duke, father of Angel, was a big ol cuddler. Dont let his size fuel ya, he behaved more like a lap dog. 
+    </p>
+
+    <div class="dog-gallery">
+      <img src="duke1.jpg">
+    </div>
+  </div>
+</div> 
+
+    <!-- DOG4 -->
+<div class="dog-card" onclick="toggleDog(this)">
+  <img src="duke1.jpg">
+  <h3>Duke</h3>
+
+  <div class="dog-expand">
+    <p class="dog-story">
+      Duke, father of Angel, was a big ol cuddler. Dont let his size fuel ya, he behaved more like a lap dog. 
+    </p>
+
+    <div class="dog-gallery">
+      <img src="duke1.jpg">
+    </div>
+  </div>
+</div> 
+
+    <!-- DOG4 -->
+<div class="dog-card" onclick="toggleDog(this)">
+  <img src="duke1.jpg">
+  <h3>Duke</h3>
+
+  <div class="dog-expand">
+    <p class="dog-story">
+      Duke, father of Angel, was a big ol cuddler. Dont let his size fuel ya, he behaved more like a lap dog. 
+    </p>
+
+    <div class="dog-gallery">
+      <img src="duke1.jpg">
+    </div>
+  </div>
+</div> 
+
+    <!-- DOG4 -->
 <div class="dog-card" onclick="toggleDog(this)">
   <img src="duke1.jpg">
   <h3>Duke</h3>
