--- a/gallery.html
+++ b/gallery.html
@@ -209,13 +209,14 @@ footer {
     <div class="dog-gallery">
       <img src="snow2.jpg">
       <img src="snow1.jpg">
+      <img src="sk1.jpg">
     </div>
   </div>
 </div>
     
 <!-- DOG3 -->
 <div class="dog-card" onclick="toggleDog(this)">
-  <img src="jax1.jpg">
+  <img src="jax3.jpg">
   <h3>Jaxson</h3>
 
   <div class="dog-expand">
@@ -264,34 +265,36 @@ footer {
   </div>
 </div> 
 
-    <!-- DOG4 -->
+    <!-- DOG5 -->
 <div class="dog-card" onclick="toggleDog(this)">
-  <img src="duke1.jpg">
-  <h3>Duke</h3>
+  <img src="kong1.jpeg">
+  <h3>King Kong</h3>
 
   <div class="dog-expand">
     <p class="dog-story">
-      Duke, father of Angel, was a big ol cuddler. Dont let his size fuel ya, he behaved more like a lap dog. 
+      Kong came to us in a time that we needed him most. He quickly bonded with his Sister Snow, and my Son. Kong was as big a dog as they come, standing almost 4 feet on all fours, but dont let his size fool you, King Kong would never harm anyone. 
     </p>
 
     <div class="dog-gallery">
-      <img src="duke1.jpg">
+      <img src="kong1.jpeg">
+      <img src="kong2.jpg">
     </div>
   </div>
 </div> 
 
-    <!-- DOG4 -->
+    <!-- DOG6 -->
 <div class="dog-card" onclick="toggleDog(this)">
-  <img src="duke1.jpg">
-  <h3>Duke</h3>
+  <img src="bella1.jpeg">
+  <h3>Bella</h3>
 
   <div class="dog-expand">
     <p class="dog-story">
-      Duke, father of Angel, was a big ol cuddler. Dont let his size fuel ya, he behaved more like a lap dog. 
+      Bella was a black lab. She was loved very much by everyone she met always smiling at you. 
     </p>
 
     <div class="dog-gallery">
-      <img src="duke1.jpg">
+      <img src="bella1.jpeg">
+      <img src="bella2.jpeg">
     </div>
   </div>
 </div> 
