--- a/index.html
+++ b/index.html
@@ -243,9 +243,10 @@
     <p>Emergency housing and rehousing for dogs when owners can’t be there.</p>
 
     <div class="slider">
-      <img src="angel1.jpeg" class="slide active">
-      <img src="angel2.jpeg" class="slide">
-      <img src="angel3.jpeg" class="slide">
+      <img src="snow2.jpg" class="slide active">
+      <img src="kong2.jpg" class="slide">
+      <img src="sk1.jpg" class="slide">
+      <img src="angel1.jpeg" class="slide">
     </div>
 
     <a href="#intake" class="btn-primary">Request Help</a>
