--- a/gallery.html
+++ b/gallery.html
@@ -100,6 +100,28 @@ header {
   text-decoration: none;
 }
 
+  #lightbox-prev,
+#lightbox-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 60px;
+  color: white;
+  cursor: pointer;
+  user-select: none;
+  padding: 10px;
+}
+
+#lightbox-prev { left: 30px; }
+#lightbox-next { right: 30px; }
+
+@media(max-width:600px){
+  #lightbox-prev,
+  #lightbox-next {
+    font-size: 40px;
+  }
+}
+  
 .menu a:hover {
   background: var(--support);
 }
@@ -335,8 +357,11 @@ footer {
 
  <div id="lightbox">
   <span id="lightbox-close">×</span>
+  <span id="lightbox-prev">‹</span>
   <img id="lightbox-img">
+  <span id="lightbox-next">›</span>
 </div>
+
   
 <script>
 document.addEventListener('DOMContentLoaded', () => {
@@ -360,28 +385,72 @@ document.addEventListener('DOMContentLoaded', () => {
     });
     card.classList.toggle('active');
   };
+  <script>
+let currentImages = [];
+let currentIndex = 0;
 
-  const lightbox = document.getElementById('lightbox');
-  const lightboxImg = document.getElementById('lightbox-img');
-  const lightboxClose = document.getElementById('lightbox-close');
+const lightbox = document.getElementById('lightbox');
+const lightboxImg = document.getElementById('lightbox-img');
+const lightboxClose = document.getElementById('lightbox-close');
+const lightboxNext = document.getElementById('lightbox-next');
+const lightboxPrev = document.getElementById('lightbox-prev');
 
-  document.querySelectorAll('.dog-card img').forEach(img => {
-    img.addEventListener('click', e => {
-      e.stopPropagation();
-      lightbox.style.display = 'flex';
-      lightboxImg.src = img.src;
-    });
+// Open from dog gallery
+document.querySelectorAll('.dog-card img').forEach(img => {
+  img.addEventListener('click', e => {
+    e.stopPropagation();
+
+    const card = img.closest('.dog-card');
+    const imgs = card.querySelectorAll('.dog-gallery img, > img');
+
+    currentImages = [...imgs].map(i => i.src);
+    currentIndex = currentImages.indexOf(img.src);
+    if (currentIndex < 0) currentIndex = 0;
+
+    showImage();
+    lightbox.style.display = 'flex';
   });
+});
 
-  lightboxClose.onclick = () => {
-    lightbox.style.display = 'none';
-  };
+function showImage() {
+  lightboxImg.src = currentImages[currentIndex];
+}
 
-  lightbox.onclick = e => {
-    if (e.target === lightbox) {
-      lightbox.style.display = 'none';
-    }
-  };
+lightboxNext.onclick = () => {
+  currentIndex = (currentIndex + 1) % currentImages.length;
+  showImage();
+};
+
+lightboxPrev.onclick = () => {
+  currentIndex = (currentIndex - 1 + currentImages.length) % currentImages.length;
+  showImage();
+};
+
+lightboxClose.onclick = () => {
+  lightbox.style.display = 'none';
+};
+
+lightbox.onclick = e => {
+  if (e.target === lightbox) lightbox.style.display = 'none';
+};
+
+
+
+// ---- SWIPE SUPPORT ----
+let startX = 0;
+
+lightbox.addEventListener('touchstart', e => {
+  startX = e.touches[0].clientX;
+});
+
+lightbox.addEventListener('touchend', e => {
+  let endX = e.changedTouches[0].clientX;
+  let diff = startX - endX;
+
+  if (diff > 50) lightboxNext.click();
+  if (diff < -50) lightboxPrev.click();
+});
+</script>
 
 });
 </script>
