--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
   <button class="menu-btn" id="menuToggle">☰ Menu</button>
 
   <div class="menu" id="menu">
-  <a href="index.html">Home</a>
+  <a href="gallery1.html">Gallery</a>
   <a href="about.html">About Us</a>
   <a href="testimonies1.html">Testimonies</a>
   <a href="mission1.html">Our Mission</a>
