--- a/about.html
+++ b/about.html
@@ -116,12 +116,13 @@
 
   <nav class="nav">
     <button class="menu-btn" id="menuToggle">☰ Menu</button>
-    <div class="menu" id="menu">
-      <a href="index.html">Home</a>
-      <a href="gallery.html">Images</a>
-      <a href="testimonies1.html">Testimonies</a>
-      <a href="mission1.html">Our Mission</a>
-    </div>
+   <div class="menu" id="menu">
+  <a href="index.html">Home</a>
+  <a href="gallery1.html">About Us</a>
+  <a href="testimonies1.html">Testimonies</a>
+  <a href="mission1.html">Our Mission</a>
+  <a href="https://www.paypal.me/KeelerK9" target="_blank" class="menu-donate">🐾 Donate</a>
+</div>
   </nav>
 
   <h1>Keeler K-9 Services</h1>
