--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
     <button class="menu-btn" id="menuToggle">☰ Menu</button>
    <div class="menu" id="menu">
   <a href="index.html">Home</a>
-  <a href="gallery1.html">About Us</a>
+  <a href="gallery1.html">Gallery</a>
   <a href="testimonies1.html">Testimonies</a>
   <a href="mission1.html">Our Mission</a>
   <a href="https://www.paypal.me/KeelerK9" target="_blank" class="menu-donate">🐾 Donate</a>
