--- a/about.html
+++ b/about.html
@@ -12,6 +12,17 @@
       --support: #C98B4B;
     }
 
+    .menu-donate {
+  background: linear-gradient(135deg, #E87C22, #ffb25a);
+  color: #111 !important;
+  font-weight: bold;
+  text-align: center;
+}
+
+.menu-donate:hover {
+  background: linear-gradient(135deg, #ffb25a, #E87C22);
+}
+    
     body {
       margin: 5;
       font-family: Arial, sans-serif;
