--- a/mission1.html
+++ b/mission1.html
@@ -130,7 +130,7 @@ footer {
     <button class="menu-btn" id="menuToggle">☰ Menu</button>
    <div class="menu" id="menu">
   <a href="index.html">Home</a>
-  <a href="gallery1.html">About Us</a>
+  <a href="about.html">About Us</a>
   <a href="testimonies1.html">Testimonies</a>
   <a href="gallery.html">Gallery</a>
   <a href="https://www.paypal.me/KeelerK9" target="_blank" class="menu-donate">🐾 Donate</a>
