--- a/gallery.html
+++ b/gallery.html
@@ -229,7 +229,7 @@ footer {
   <a href="about.html">About Us</a>
   <a href="testimonies1.html">Testimonies</a>
   <a href="mission1.html">Our Mission</a>
-  <a href="https://www.paypal.me/KeelerK9" target="_blank" class="menu-donate">🐾 Donate</a>
+  <a href="paypal.me/KeelerK9Services" target="_blank" class="menu-donate">🐾 Donate</a>
 </div>
   </nav>
 
