--- a/gallery.html
+++ b/gallery.html
@@ -227,6 +227,7 @@ footer {
    <div class="menu" id="menu">
   <a href="index.html">Home</a>
   <a href="about.html">About Us</a>
+     <a href="pack.html">The Pack</a>
   <a href="testimonies1.html">Testimonies</a>
   <a href="mission1.html">Our Mission</a>
   <a href="https://www.paypal.me/KeelerK9Services" target="_blank" class="menu-donate">🐾 Donate</a>
@@ -242,7 +243,7 @@ footer {
 
     <!-- DOG1 -->
 <div class="dog-card" onclick="toggleDog(this)">
-  <img src="angel2.jpeg">
+  <img src="goodangel8.jpg">
   <h3>Angel</h3>
 
   <div class="dog-expand">
@@ -250,9 +251,13 @@ footer {
       Angel was born into Keeler K-9 services after her mom(Emily) and dad(Duke) were rescued, unbeknownst that Emily was already pregnant. A couple weeks went by and she had her litter, and we named her Angel due to the white, angel wing like spot on her chest. At that moment in time she was the exact Angel i needed.
     </p>
     <div class="dog-gallery">
-      <img src="angel2.jpeg">
-      <img src="angel3.jpeg">
-      <img src="angel1.jpeg">
+      <img src="goodangel1.jpg">
+      <img src="goodangel2.jpg">
+      <img src="goodangel3.jpg">
+      <img src="goodangel5.jpg">
+        <img src="goodange6.jpg">
+      <img src="goodangel7.jpg">
+      <img src="goodangel8.jpg">
     </div>
   </div>
 </div>
